--- a/vercel.json
+++ b/vercel.json
@@ -4,45 +4,52 @@
     {
       "src": "backend/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/server.js"
+      "dest": "/backend/server.js"
     },
     {
       "src": "/public/(.*)",
       "dest": "/public/$1"
     },
     {
-      "src": "/(.*\\.css)",
-      "dest": "/frontend/$1"
+      "src": "/css/(.*)",
+      "dest": "/frontend/css/$1"
     },
     {
-      "src": "/(.*\\.js)",
-      "dest": "/frontend/$1"
+      "src": "/js/(.*)",
+      "dest": "/frontend/js/$1"
     },
     {
-      "src": "/signup",
+      "src": "/signup.html",
       "dest": "/frontend/signup.html"
     },
     {
-      "src": "/reset",
+      "src": "/reset.html",
       "dest": "/frontend/reset.html"
     },
     {
-      "src": "/dashboard",
+      "src": "/dashboard.html",
       "dest": "/frontend/dashboard.html"
+    },
+    {
+      "src": "/index.html",
+      "dest": "/frontend/index.html"
     },
     {
       "src": "/",
       "dest": "/frontend/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
     }
-  ],
-  "outputDirectory": "frontend"
+  ]
 }
